# rag-rs

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: build.yaml  lint.yaml  test.yaml
scripts/: version_bump.py
src/: caching.rs  chunking.rs  embedding.rs  main.rs  parsing.rs  pipeline.rs  serving.rs  vectordb.rs
testfiles/: unsupported.json
