[package]
name = "rag-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bm25 = { version = "2.3.2", features = ["language_detection"] }
memchunk = "0.4.0"
qdrant-client = "1.16.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tonic = "0.14.2"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
